--- a/pages/cart.html
+++ b/pages/cart.html
@@ -38,35 +38,137 @@
           <div class="separator"></div>
           <div class="cart-checkout">
             <h2>Your Cart</h2>
-            <div class="cart-left">
-              <div class="cart-item-container">
-                <div class="cart-item">
-                  <img src="../assets/images/main1.png" alt="makanan" />
-                  <div>
-                    <p>Gado gado Baratie style</p>
-                    <span>$29</span>
+            <div class="cart-checkout-container">
+              <div class="cart-left">
+                <div class="cart-item-container">
+                  <div class="cart-item">
+                    <img src="../assets/images/cart1.png" alt="makanan" />
+                    <div>
+                      <p>Gado gado Baratie style</p>
+                      <span>$29</span>
+                    </div>
+                  </div>
+                  <div class="cart-qty">
+                    <button class="cart-delete-button">
+                      <img src="../assets/images/delete.png" alt="" />
+                    </button>
+                    <div class="card-menu-quantity">
+                      <button>
+                        <img src="../assets/icons/minus.png" alt="minus" />
+                      </button>
+                      <p>1</p>
+                      <button>
+                        <img src="../assets/icons/plus.png" alt="plus" />
+                      </button>
+                    </div>
                   </div>
                 </div>
-                <div class="cart-qty">
-                  <button class="cart-delete-button">
-                    <img src="../assets/images/delete.png" alt="" />
-                  </button>
-                  <div class="card-menu-quantity">
-                    <button>
-                      <img src="../assets/icons/minus.png" alt="minus" />
+                <hr />
+                <div class="cart-item-container">
+                  <div class="cart-item">
+                    <img src="../assets/images/cart2.png" alt="makanan" />
+                    <div>
+                      <p>Pomegranate</p>
+                      <span>$24</span>
+                    </div>
+                  </div>
+                  <div class="cart-qty">
+                    <button class="cart-delete-button">
+                      <img src="../assets/images/delete.png" alt="" />
                     </button>
-                    <p>1</p>
-                    <button>
-                      <img src="../assets/icons/plus.png" alt="plus" />
+                    <div class="card-menu-quantity">
+                      <button>
+                        <img src="../assets/icons/minus.png" alt="minus" />
+                      </button>
+                      <p>1</p>
+                      <button>
+                        <img src="../assets/icons/plus.png" alt="plus" />
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <hr />
+                <div class="cart-item-container">
+                  <div class="cart-item">
+                    <img src="../assets/images/cart3.png" alt="makanan" />
+                    <div>
+                      <p>Mixed Berry Cheesecake</p>
+                      <span>$25</span>
+                    </div>
+                  </div>
+                  <div class="cart-qty">
+                    <button class="cart-delete-button">
+                      <img src="../assets/images/delete.png" alt="" />
                     </button>
+                    <div class="card-menu-quantity">
+                      <button>
+                        <img src="../assets/icons/minus.png" alt="minus" />
+                      </button>
+                      <p>1</p>
+                      <button>
+                        <img src="../assets/icons/plus.png" alt="plus" />
+                      </button>
+                    </div>
                   </div>
                 </div>
               </div>
+              <div class="cart-right">
+                <p>Order Summary</p>
+                <div class="cart-order">
+                  <div class="cart-order-subtotal">
+                    <p>Subtotal</p>
+                    <span>78$</span>
+                  </div>
+                  <div class="cart-order-subtotal">
+                    <p>Delivery Fee</p>
+                    <span>15$</span>
+                  </div>
+                  <hr />
+                  <div class="cart-order-subtotal">
+                    <p>Total</p>
+                    <span>93$</span>
+                  </div>
+                  <button>Go to Checkout</button>
+                </div>
+              </div>
             </div>
-            <div class="cart-right"></div>
           </div>
         </div>
       </section>
+      <footer>
+        <div class="content-wrapper">
+          <div class="footer">
+            <div class="footer-info">
+              <h1>BARATIE</h1>
+              <p>
+                We have clothes that suits your style and which you’re proud to
+                wear. From women to men.
+              </p>
+              <img src="../assets/icons/Social.png" alt="Sosmed" />
+            </div>
+            <div class="footer-menu">
+              <p>QUICK MENU</p>
+              <ul>
+                <li>Home</li>
+                <li>Shop</li>
+                <li>Reservation</li>
+                <li>Signup/Login</li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-separator"></div>
+          <div class="footer-copyright">
+            <p>Baratie © 2024. All Rights Reserved</p>
+            <div class="list-badge">
+              <img src="../assets/icons/badge1.png" alt="badge" />
+              <img src="../assets/icons/badge2.png" alt="badge" />
+              <img src="../assets/icons/badge3.png" alt="badge" />
+              <img src="../assets/icons/badge4.png" alt="badge" />
+              <img src="../assets/icons/badge5.png" alt="badge" />
+            </div>
+          </div>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
